Stable sound muffling

--- a/.editorconfig
+++ b/.editorconfig
@@ -96,6 +96,9 @@ resharper_keep_existing_embedded_arrangement = false
 resharper_keep_existing_expr_member_arrangement = false
 resharper_keep_existing_initializer_arrangement = false
 resharper_keep_existing_invocation_parens_arrangement = false
+resharper_keep_existing_list_patterns_arrangement = false
+resharper_keep_existing_property_patterns_arrangement = false
+resharper_keep_existing_switch_expression_arrangement = false
 resharper_new_line_before_while = true
 resharper_object_creation_when_type_evident = explicitly_typed
 resharper_place_accessorholder_attribute_on_same_line = false
@@ -103,7 +106,7 @@ resharper_place_accessor_attribute_on_same_line = true
 resharper_place_record_field_attribute_on_same_line = true
 resharper_place_simple_accessor_on_single_line = false
 resharper_place_simple_embedded_statement_on_same_line = false
-resharper_place_simple_initializer_on_single_line = false
+resharper_place_simple_switch_expression_on_single_line = true
 resharper_prefer_separate_deconstructed_variables_declaration = true
 resharper_show_autodetect_configure_formatting_tip = false
 resharper_use_indent_from_vs = false
