--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -8,6 +8,7 @@
         <PlatformTarget>AnyCPU</PlatformTarget>
         <PackageId>EndlessEscapade</PackageId>
         <LangVersion>latest</LangVersion>
+        <!--<AllowUnsafeBlocks>true</AllowUnsafeBlocks>-->
     </PropertyGroup>
 
     <PropertyGroup>
@@ -18,7 +19,6 @@
 
         <!-- for github workflows -->
         <ExtraBuildModFlags Condition="'$(TML_PATH_OVERRIDE)' != ''">$(ExtraBuildModFlags)-savedirectory "$([System.IO.Path]::GetFullPath('.'))/$(TML_PATH_OVERRIDE)"</ExtraBuildModFlags>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
