--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -37,4 +37,8 @@
             <HintPath>lib\SubworldLibrary.dll</HintPath>
         </Reference>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Content\Subworlds\" />
+    </ItemGroup>
 </Project>
