--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -8,7 +8,7 @@
         <PlatformTarget>AnyCPU</PlatformTarget>
         <PackageId>EndlessEscapade</PackageId>
         <LangVersion>latest</LangVersion>
-        <!--<AllowUnsafeBlocks>true</AllowUnsafeBlocks>-->
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <PropertyGroup>
