Safer audio systems

--- a/.editorconfig
+++ b/.editorconfig
@@ -99,7 +99,11 @@ resharper_keep_existing_invocation_parens_arrangement = false
 resharper_keep_existing_list_patterns_arrangement = false
 resharper_keep_existing_property_patterns_arrangement = false
 resharper_keep_existing_switch_expression_arrangement = false
+resharper_max_array_initializer_elements_on_line = 1
+resharper_max_enum_members_on_line = 1
+resharper_max_formal_parameters_on_line = 10
 resharper_max_initializer_elements_on_line = 1
+resharper_max_invocation_arguments_on_line = 10
 resharper_new_line_before_while = true
 resharper_object_creation_when_type_evident = explicitly_typed
 resharper_place_accessorholder_attribute_on_same_line = false
