--- a/.editorconfig
+++ b/.editorconfig
@@ -71,7 +71,7 @@ resharper_braces_for_foreach = required
 resharper_braces_for_ifelse = required
 resharper_braces_for_while = required
 resharper_braces_redundant = false
-resharper_csharp_empty_block_style = together
+resharper_csharp_empty_block_style = together_same_line
 resharper_csharp_insert_final_newline = true
 resharper_csharp_max_line_length = 200
 resharper_csharp_wrap_after_declaration_lpar = true
@@ -114,6 +114,7 @@ resharper_place_simple_embedded_statement_on_same_line = false
 resharper_place_simple_switch_expression_on_single_line = true
 resharper_prefer_separate_deconstructed_variables_declaration = true
 resharper_show_autodetect_configure_formatting_tip = false
+resharper_use_continuous_indent_inside_initializer_braces = false
 resharper_use_indent_from_vs = false
 resharper_wrap_array_initializer_style = chop_if_long
 resharper_wrap_before_eq = true
