--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-[*]
+﻿[*]
 charset = utf-8-bom
 end_of_line = crlf
 trim_trailing_whitespace = false
@@ -14,25 +14,25 @@ csharp_style_var_elsewhere = true:suggestion
 csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
 dotnet_naming_rule.private_constants_rule.import_to_resharper = as_predefined
-dotnet_naming_rule.private_constants_rule.severity = warning
+dotnet_naming_rule.private_constants_rule.severity = suggestion
 dotnet_naming_rule.private_constants_rule.style = upper_camel_case_style
 dotnet_naming_rule.private_constants_rule.symbols = private_constants_symbols
 dotnet_naming_rule.private_instance_fields_rule.import_to_resharper = as_predefined
-dotnet_naming_rule.private_instance_fields_rule.severity = warning
+dotnet_naming_rule.private_instance_fields_rule.severity = suggestion
 dotnet_naming_rule.private_instance_fields_rule.style = lower_camel_case_style
 dotnet_naming_rule.private_instance_fields_rule.symbols = private_instance_fields_symbols
 dotnet_naming_rule.private_static_fields_rule.import_to_resharper = as_predefined
-dotnet_naming_rule.private_static_fields_rule.severity = warning
+dotnet_naming_rule.private_static_fields_rule.severity = suggestion
 dotnet_naming_rule.private_static_fields_rule.style = lower_camel_case_style
 dotnet_naming_rule.private_static_fields_rule.symbols = private_static_fields_symbols
 dotnet_naming_rule.private_static_readonly_rule.import_to_resharper = as_predefined
-dotnet_naming_rule.private_static_readonly_rule.severity = warning
-dotnet_naming_rule.private_static_readonly_rule.style = upper_camel_case_style
+dotnet_naming_rule.private_static_readonly_rule.severity = suggestion
+dotnet_naming_rule.private_static_readonly_rule.style = lower_camel_case_style
 dotnet_naming_rule.private_static_readonly_rule.symbols = private_static_readonly_symbols
 dotnet_naming_rule.unity_serialized_field_rule.import_to_resharper = True
 dotnet_naming_rule.unity_serialized_field_rule.resharper_description = Unity serialized field
 dotnet_naming_rule.unity_serialized_field_rule.resharper_guid = 5f0fdb63-c892-4d2c-9324-15c80b22a7ef
-dotnet_naming_rule.unity_serialized_field_rule.severity = warning
+dotnet_naming_rule.unity_serialized_field_rule.severity = suggestion
 dotnet_naming_rule.unity_serialized_field_rule.style = lower_camel_case_style
 dotnet_naming_rule.unity_serialized_field_rule.symbols = unity_serialized_field_symbols
 dotnet_naming_style.lower_camel_case_style.capitalization = camel_case
@@ -104,15 +104,16 @@ resharper_max_formal_parameters_on_line = 10
 resharper_max_initializer_elements_on_line = 1
 resharper_max_invocation_arguments_on_line = 10
 resharper_new_line_before_while = true
-resharper_object_creation_when_type_evident = explicitly_typed
 resharper_place_accessorholder_attribute_on_same_line = false
 resharper_place_accessor_attribute_on_same_line = true
 resharper_place_record_field_attribute_on_same_line = true
 resharper_place_simple_accessor_on_single_line = false
 resharper_place_simple_embedded_statement_on_same_line = false
+resharper_place_simple_method_on_single_line = true
 resharper_place_simple_switch_expression_on_single_line = true
 resharper_prefer_separate_deconstructed_variables_declaration = true
 resharper_show_autodetect_configure_formatting_tip = false
+resharper_static_members_qualify_with = current_type
 resharper_use_continuous_indent_inside_initializer_braces = false
 resharper_use_indent_from_vs = false
 resharper_wrap_array_initializer_style = chop_if_long
@@ -122,13 +123,23 @@ resharper_wrap_chained_binary_patterns = chop_if_long
 resharper_wrap_chained_method_calls = chop_if_long
 resharper_wrap_list_pattern = chop_if_long
 resharper_wrap_switch_expression = chop_if_long
+resharper_wrap_text = false
+resharper_xmldoc_attribute_indent = align_by_first_attribute
+resharper_xmldoc_blank_line_after_pi = false
 resharper_xmldoc_max_line_length = 200
+resharper_xmldoc_space_before_self_closing = false
 
 # ReSharper inspection severities
+resharper_arrange_accessor_owner_body_highlighting = none
+resharper_arrange_default_value_when_type_evident_highlighting = hint
+resharper_arrange_modifiers_order_highlighting = hint
+resharper_arrange_namespace_body_highlighting = suggestion
+resharper_arrange_object_creation_when_type_evident_highlighting = hint
 resharper_arrange_redundant_parentheses_highlighting = hint
 resharper_arrange_this_qualifier_highlighting = hint
 resharper_arrange_type_member_modifiers_highlighting = hint
 resharper_arrange_type_modifiers_highlighting = hint
+resharper_arrange_var_keywords_in_deconstructing_declaration_highlighting = hint
 resharper_built_in_type_reference_style_for_member_access_highlighting = hint
 resharper_built_in_type_reference_style_highlighting = hint
 resharper_redundant_base_qualifier_highlighting = warning
