--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -32,4 +32,8 @@
             <HintPath>lib\SubworldLibrary.dll</HintPath>
         </Reference>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Common\Titles\" />
+    </ItemGroup>
 </Project>
