--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="..\tModLoader.targets"/>
+    <Import Project="..\tModLoader.targets" />
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -21,7 +21,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*"/>
+      <None Remove="Assets\Effects\SeafoamShader.fx" />
+      <None Remove="Assets\Effects\SeamapBorderVignette.fx" />
+      <None Remove="Assets\Effects\SeamapCloudShader.fx" />
+      <None Remove="Assets\Effects\WaterShader.fx" />
+      <None Remove="Assets\Effects\WaterShaderBase.fx" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
     </ItemGroup>
 
     <ItemGroup>
