Changes solution directory

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,4 +17,4 @@ jobs:
       run: dotnet restore
 
     - name: Lint
-      run: dotnet format style src/EndlessEscapade.sln --verify-no-changes
+      run: dotnet format style EndlessEscapade.sln --verify-no-changes
