--- a/src/EndlessEscapade/EndlessEscapade.csproj
+++ b/src/EndlessEscapade/EndlessEscapade.csproj
@@ -7,6 +7,14 @@
     <Nullable>enable</Nullable>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+  
+  <PropertyGroup>
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Aurora.Generators\Aurora.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="StructureHelper">
